--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -1,6 +1,11 @@
 # see Unix section for documentation of switches
 # this file is copied directly to .pri on Windows
 
+# for some whacky reason, CONFIG had way too much default stuff, so we init it here:
+CONFIG = lex yacc plugin warn_off uic resources qt incremental stl link_prl
+# TODO: this was in the list in Linux, but make sure this isn't nasty on Mac...
+CONFIG += qt_no_framework
+
 # on Unix, if empty, then inc/lib etc. paths are from install
 PDP4_DIR = $$(PDP4DIR)
 
@@ -8,23 +13,30 @@ win32 {
 #TODO: need to pass in the msvc target, ex Debug or Release (for pathing)
 #MSVC_TARGET = Debug
 
-contains( MSVC_TARGET, Debug ) {
-  CONFIG += debug
-} contains( MSVC_TARGET, Release )
-} else {
-  error("MSVC_TARGET variable must be defined as either Debug or Release")
-}
+  contains( MSVC_TARGET, Debug ) {
+    CONFIG += debug
+    eror("ONLY A TEST, delete this line")
+  } else contains( MSVC_TARGET, Release ) {
+  } else {
+    error("MSVC_TARGET variable must be defined as either Debug or Release")
+  }
   
   LIB_VER = 
   SYS_PLUGIN_DIR = $$(PDP4DIR)/plugins
   CONFIG_PRI = $$(PDP4DIR)/plugins/config.pri
   PDP_SYS_DIR = $$(PDP4DIR)
+  MAKETA = $$(PDP4DIR)/bin/maketa
+  
+#TODO: add our pdp project depends on Windows, ex ode etc.
+#  LIBS +=   
   
 } else {
 
 
 # needed to resolve autools paths
   prefix = @PL_prefix@
+  exec_prefix = @PL_exec_prefix@
+  bindir = @PL_bindir@
 # this will be the prefix path of pdp system directory, if installed
   datadir = @PL_datadir@
   includedir = @PL_includedir@
@@ -51,11 +63,15 @@ contains( MSVC_TARGET, Debug ) {
   
   # now, the modal paths that depend on whether PDP4DIR is defined or not
   isEmpty( PDP4_DIR ) {
-    PDP_INC_DIR = ${includedir}/pdp++-@PL_LIB_VER@
+    PDP4_DIR =  $${datadir}/pdp++-@PL_LIB_VER@
+    PDP4_INC_DIR = $${includedir}/pdp++-@PL_LIB_VER@
+    MAKETA = $${bindir}/maketa
   } else {
-    PDP_INC_DIR = ${PDP4_DIR}/src
-    LIBS += -L$(PDP4_DIR)/src/ta_lib/.libs
-    LIBS += -L$(PDP4_DIR)/src/pdp_lib/.libs
+    PDP4_INC_DIR = $${PDP4_DIR}/src
+    LIBS += -L$${PDP4_DIR}/src/ta_lib/.libs
+    LIBS += -L$${PDP4_DIR}/src/pdp_lib/.libs
+    MAKETA = $${PDP4_DIR}/src/maketa/maketa
+
   }
 }
 
