--- a/src/css_bin/Makefile.in
+++ b/src/css_bin/Makefile.in
@@ -121,7 +121,6 @@ EGREP = @EGREP@
 EXEEXT = @EXEEXT@
 GCC_FALSE = @GCC_FALSE@
 GCC_TRUE = @GCC_TRUE@
-GREP = @GREP@
 INCLUDE_AMINCLUDE_AM = @INCLUDE_AMINCLUDE_AM@
 INC_AMINCLUDE = @INC_AMINCLUDE@
 INSTALL_DATA = @INSTALL_DATA@
@@ -171,8 +170,15 @@ PLUGINS_FALSE = @PLUGINS_FALSE@
 PLUGINS_TRUE = @PLUGINS_TRUE@
 PL_DEBUG = @PL_DEBUG@
 PL_DMEM_COMPILE = @PL_DMEM_COMPILE@
+PL_LIBS = @PL_LIBS@
 PL_LIB_VER = @PL_LIB_VER@
 PL_TA_NO_GUI = @PL_TA_NO_GUI@
+PL_abs_top_builddir = @PL_abs_top_builddir@
+PL_bindir = @PL_bindir@
+PL_datadir = @PL_datadir@
+PL_exec_prefix = @PL_exec_prefix@
+PL_includedir = @PL_includedir@
+PL_prefix = @PL_prefix@
 POW_LIB = @POW_LIB@
 PROFILE_FALSE = @PROFILE_FALSE@
 PROFILE_TRUE = @PROFILE_TRUE@
@@ -195,11 +201,13 @@ WHEREAMI = @WHEREAMI@
 WINDOWS_FALSE = @WINDOWS_FALSE@
 WINDOWS_TRUE = @WINDOWS_TRUE@
 YACC = @YACC@
-YFLAGS = @YFLAGS@
 abs_srcdir = @abs_srcdir@
 abs_top_builddir = @abs_top_builddir@
+ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
 ac_ct_CXX = @ac_ct_CXX@
+ac_ct_RANLIB = @ac_ct_RANLIB@
+ac_ct_STRIP = @ac_ct_STRIP@
 am__fastdepCC_FALSE = @am__fastdepCC_FALSE@
 am__fastdepCC_TRUE = @am__fastdepCC_TRUE@
 am__fastdepCXX_FALSE = @am__fastdepCXX_FALSE@
@@ -216,31 +224,24 @@ build_cpu = @build_cpu@
 build_os = @build_os@
 build_vendor = @build_vendor@
 datadir = @datadir@
-datarootdir = @datarootdir@
-docdir = @docdir@
-dvidir = @dvidir@
 exec_prefix = @exec_prefix@
 host = @host@
 host_alias = @host_alias@
 host_cpu = @host_cpu@
 host_os = @host_os@
 host_vendor = @host_vendor@
-htmldir = @htmldir@
 includedir = @includedir@
 infodir = @infodir@
 install_sh = @install_sh@
 libdir = @libdir@
 libexecdir = @libexecdir@
-localedir = @localedir@
 localstatedir = @localstatedir@
 mandir = @mandir@
 mkdir_p = @mkdir_p@
 oldincludedir = @oldincludedir@
-pdfdir = @pdfdir@
 pdpexists = @pdpexists@
 prefix = @prefix@
 program_transform_name = @program_transform_name@
-psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sim_ac_coin_configcmd = @sim_ac_coin_configcmd@
