--- a/plugins/Makefile.in
+++ b/plugins/Makefile.in
@@ -81,6 +81,8 @@ install:
 	@echo " "
 	$(MKDIR) $(PDP_SYS_DIR)/lib
 	$(CP) -Ru ../lib/plugins  $(PDP_SYS_DIR)/lib
+	$(MKDIR) $(PDP_SYS_DIR)/plugins
+	$(CP) -u config.pri shared_pre.pri shared.pri Makefile  $(PDP_SYS_DIR)/plugins
 	@echo " "
 	@echo "** Make $@ successfully completed! **"
 	@echo " "
