--- a/plugins/config.pri.in
+++ b/plugins/config.pri.in
@@ -15,10 +15,12 @@ win32 {
 
   contains( MSVC_TARGET, Debug ) {
     CONFIG += debug
-  } else { contains( MSVC_TARGET, Release ) {
-    CONFIG += release
-  } else {
-    error("MSVC_TARGET variable must be defined as either Debug or Release")
+  } else { 
+    contains( MSVC_TARGET, Release ) {
+      CONFIG += release
+    } else {
+      error("MSVC_TARGET variable must be defined as either Debug or Release")
+    }
   }
   
   LIB_VER = 
@@ -35,12 +37,18 @@ win32 {
 
 
 # needed to resolve autools paths
-  prefix = @PL_prefix@
-  exec_prefix = @PL_exec_prefix@
-  bindir = @PL_bindir@
+#  prefix = @PL_prefix@
+#  exec_prefix = @PL_exec_prefix@
+#  bindir = @PL_bindir@
 # this will be the prefix path of pdp system directory, if installed
-  datadir = @PL_datadir@
-  includedir = @PL_includedir@
+#  datadir = @PL_datadir@
+#  includedir = @PL_includedir@
+  
+# TODO: need to fix the bugs in various issues of configure/sed
+  prefix = /usr/local
+  bindir = $${prefix}/bin
+  datadir = $${prefix}/share
+  includedir = $${prefix}/include
     
   CONFIG += @PL_DEBUG@
   CONFIG += @PL_DMEM_COMPILE@
@@ -55,17 +63,17 @@ win32 {
 #  PDP_BUILD_DIR = @PL_abs_top_builddir@
 #TODO: if PDP4DIR exists, then we want to replace PDP_BUILD_DIR with it
 # the pdp system folder (Unix); (just the app folder on Win)
-  PDP_SYS_DIR = ${datadir}/pdp++-@PL_LIB_VER@
+  PDP_SYS_DIR = ${datadir}/pdp++
 # the installed headers folder
   
 # the install target for plugins
-  SYS_PLUGIN_DIR = ${datadir}/pdp++-@PL_LIB_VER@/plugins
+  SYS_PLUGIN_DIR = ${datadir}/pdp++/plugins
   CONFIG_PRI = @abs_srcdir@/config.pri
   
   # now, the modal paths that depend on whether PDP4DIR is defined or not
   isEmpty( PDP4_DIR ) {
-    PDP4_DIR =  $${datadir}/pdp++-@PL_LIB_VER@
-    PDP4_INC_DIR = $${includedir}/pdp++-@PL_LIB_VER@
+    PDP4_DIR =  $${datadir}/pdp++
+    PDP4_INC_DIR = $${includedir}/pdp++
     MAKETA = $${bindir}/maketa
   } else {
     PDP4_INC_DIR = $${PDP4_DIR}/src
