--- a/src/cs/Makefile.am
+++ b/src/cs/Makefile.am
@@ -20,6 +20,8 @@ SRCS=\
 	cs.cpp \
 	cs_v3_compat.cpp
 
+include_HEADERS = $(HEADS) $(TAHEADS) cs_TA_type.h cs_TA_inst.h
+
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
