--- a/src/leabra/Makefile.am
+++ b/src/leabra/Makefile.am
@@ -31,6 +31,8 @@ SRCS=\
 	leabra_pbwm.cpp \
 	leabra_v3_compat.cpp
 
+include_HEADERS = $(HEADS) $(TAHEADS) leabra_TA_type.h leabra_TA_inst.h
+
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
