--- a/Maketa.am
+++ b/Maketa.am
@@ -49,13 +49,8 @@ MAKETA_FLAGS =\
 	-I@abs_top_srcdir@/src/leabra \
 	-I@abs_top_srcdir@/src/taiqtso \
 	-I@abs_top_srcdir@/src/bp \
-	-I${QTDIR}/include/QtCore
-
-
-# TODO: Fix above hacky includes
-# TODO: Is this include still needed?
-#	-I/usr/include/qt4/Qt \
-# 	${MAKETA_XXFLAGS}
+	-I${QTDIR}/include/QtCore \
+	@MAKETA_CXXFLAGS@
 
 BUILT_SOURCES = ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h
 
