beta of maketa changes

--- a/src/leabra/Makefile.am
+++ b/src/leabra/Makefile.am
@@ -6,14 +6,14 @@ srcdir = @srcdir@
 VPATH = @srcdir@
 
 TAHEADS =\
-	@abs_srcdir@/../ta/ta_TA_type.h \
-	@abs_srcdir@/../pdp/pdp_TA_type.h \
-	@abs_srcdir@/../leabra/leabra.h \
-	@abs_srcdir@/../leabra/leabra_extra.h \
-	@abs_srcdir@/../leabra/leabra_td.h \
-	@abs_srcdir@/../leabra/leabra_pvlv.h \
-	@abs_srcdir@/../leabra/leabra_pbwm.h \
-	@abs_srcdir@/../leabra/leabra_v3_compat.h
+	../ta/ta_TA_type.h \
+	../pdp/pdp_TA_type.h \
+	leabra.h \
+	leabra_extra.h \
+	leabra_td.h \
+	leabra_pvlv.h \
+	leabra_pbwm.h \
+	leabra_v3_compat.h
 
 HEADS=\
 	leabra.h \
