--- a/Maketa.am
+++ b/Maketa.am
@@ -1,5 +1,6 @@
+# note: to revert, change "-f files.mta" back to ${TAHEADS}
 ${PROJNAME}_TA.ccx: ${TAHEADS}
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
+	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} -f files.mta
 
 ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	@if test -f $@; then \
@@ -17,16 +18,16 @@ ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_inst.hx: ${PROJNAME}_TA.ccx
 	cmp $@ $< || cp $< $@
 
 gendoc:
-	${MAKETA} -gendoc ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS};
+	${MAKETA} -gendoc ${MAKETA_FLAGS} ${PROJNAME} -f files.mta;
 
 force_ta:
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}; \
+	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} -f files.mta; \
 	cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h; \
 	cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h; \
 	cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp
 
 do_ta:
-	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} -autohx ${PROJNAME} ${TAHEADS}
+	${MAKETA} @GENDOC@ ${MAKETA_FLAGS} -autohx ${PROJNAME} -f files.mta
 
 # Instruct automake to clean these files on make clean
 CLEANFILES =\
